Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -68,7 +68,7 @@ This project would not have been possible without the superb people mentioned.
 \tableofcontents
 
 \chapter{Introduction}
-In the ion trapping laboratory of professor Dzmitry Matsukevich, Ytterbium 171 ions are trapped for state manipulation and detection. Some main energy levels under interest of Ytterbium 171 ions are shown in Fig \ref{fig:Yitterbium171Ion}. Energy level transition between  $^2 S_{1/2}$ F=0 and $^2 S_{1/2}$ F=1 is the main energy level of interest, a 369.5261nm laser beam is used to address the energy level transition between the two states through Raman transition. When the trapped ion is in any of these two states, it fluoresces and can be captured by a photodetector. There exist some probabilities that the trapped ion might transit to the energy states displayed towards the right of Fig \ref{fig:Yitterbium171Ion}. To optically pumped the ion out of these "dark states", 935.1879nm and two $\approx$ 638nm laser beams are used. Original a compact grating-stabilized External Cavity Diode Laser system of frequency $\approx$ 638nm was used to generate the $\approx$ 638nm laser beam but suffered a diode failure. I replaced the diode and tuned the laser back to the needed frequency. In this report I document the procedure and relevant information. 
+In the ion trapping laboratory of professor Dzmitry Matsukevich, Ytterbium 171 ions are trapped for state manipulation and detection. Some main energy levels under interest of Ytterbium 171 ions are shown in Fig \ref{fig:Yitterbium171Ion}. Energy level transition between  $^2 S_{1/2}$ F=0 and $^2 S_{1/2}$ F=1 is the main energy level of interest, a 369.5261nm laser beam is used to address the energy level transition between the two states through Raman transition. When the trapped ion is in any of these two states, it fluoresces and can be captured by a photodetector. There exists some probabilities that the trapped ion might transit to the energy states displayed towards the right of Fig \ref{fig:Yitterbium171Ion}. To optically pumped the ion out of these "dark states", 935.1879nm and two $\approx$ 638nm laser beams are used. Original a compact grating-stabilized External Cavity Diode Laser system of frequency $\approx$ 638nm was used to generate the $\approx$ 638nm laser beam but suffered a diode failure. I replaced the diode and tuned the laser back to the needed frequency. In this report I document the procedure and relevant information. 
 \\
 \par
 As the transition to the $^2 D_{3/2}$ states is quite probable, the 935.1879nm laser has to be kept on most of the time to continuously pump the trapped ion back to bright states. Hence, effort is needed to frequency lock the laser. One way to achieve this is to lock the laser to a cavity which is locked to a master laser (assumed frequency stable) through a standard Pound–Drever–Hall (PDH) technique. 
@@ -76,19 +76,17 @@ As the transition to the $^2 D_{3/2}$ states is quite probable, the 935.1879nm l
 \begin{figure}[H]
     \centering
     \includegraphics[width=\textwidth]{Yitterbium171Ion.png}
-    \caption{Level structure for Ytterbium 171 ion \cite{DemonstrationOfRabi-FlopsWithYtterbium171Trapped-IonQubits}
+    \caption{Partial level structure for Ytterbium 171 ion \cite{DemonstrationOfRabi-FlopsWithYtterbium171Trapped-IonQubits}
     }
     \label{fig:Yitterbium171Ion}
 \end{figure}
 
 
-\chapter{Building And Tuning A Compact 638nm Grating Stabilized Diode Laser System}
+\chapter{Building And Tuning A Compact 638nm Grating Stabilized Diode Laser System}/
 \section{Theory and Laser Frequency Tuning}
 Since their first use in atomic physics in the early 80's, diode lasers have become an important part of many modern experiments. This is primarily due to the high reliability and the low price of these devices which facilitate experiments involving a number of lasers operating at different frequencies \cite{compactGratingDiodeLaser}.
 \par
-This section of the report discusses a compact grating-stabilized External Cavity Diode Laser (ECDL) system. Here, I focused on fixing an existing 638nm laser system that had suffered from a diode failure. I replaced the diode (Thorlabs, L638P040 - 638 nm, 40 mW, Ø5.6 mm pin diode) and tuned the laser around 638.61nm of wavelength for repumping Yitterbium ion out of the ${ }^2 F_{7 / 2}$ hyperfine states. Laser light of wavelengths of 638.6102nm and 638.6151nm are used to drive the transitions ${ }^2 F_{7 / 2}|F=3\rangle \leftrightarrow{ }^1[5 / 2]_{5 / 2}|F=2\rangle \text { and }{ }^2 F_{7 / 2}|F=4\rangle \leftrightarrow{ }^1[5 / 2]_{5 / 2}|F=3\rangle$ respectively. (See Fig \ref{fig:Yitterbium171Ion}) The main sources for this section of the report are \cite{compactGratingDiodeLaser}\cite{fundamentalsOfPhotonics}.
-
-
+This section of the report discusses a compact grating-stabilized External Cavity Diode Laser (ECDL) system. Here, I focused on fixing an existing 638nm laser system that had suffered from a diode failure. I replaced the diode (Thorlabs, L638P040 - 638 nm, 40 mW, Ø5.6 mm pin diode) and tuned the laser around 638.61nm of wavelength for optically pumping Ytterbium ion out of the ${ }^2 F_{7 / 2}$ hyperfine states (See red-boxed transition in Fig \ref{fig:Yitterbium171Ion}. Laser light of wavelengths of 638.6102nm and 638.6151nm are used to drive the transitions ${ }^2 F_{7 / 2}|F=3\rangle \leftrightarrow{ }^1[5 / 2]_{5 / 2}|F=2\rangle \text { and }{ }^2 F_{7 / 2}|F=4\rangle \leftrightarrow{ }^1[5 / 2]_{5 / 2}|F=3\rangle$ respectively. (See Fig \ref{fig:Yitterbium171Ion}) As the transition of the trapped ion to these states are no very probable, is neither fine tuned nor frequency locked. Jumping between the two transitions is done by manually tuning the injection current(details on frequency tuning will be discussed later). The main sources for this section of the report are \cite{compactGratingDiodeLaser}\cite{fundamentalsOfPhotonics}.
 
 \begin{figure}[H]
     \centering
@@ -105,25 +103,30 @@ This section of the report discusses a compact grating-stabilized External Cavit
     \label{fig:638laserSetup}
 \end{figure}
 
-A free-running diode suffers from having a large linewidth. In the context of ion trapping laboratory, large linewidth can result in reduced cooling efficiency, unintended energy level transitions or undesired coupling to nearby energy level and so on. An optical cavity that provides optical feedback can greatly reduce the output linewidth. How an external cavity affects emission wavelength will be discussed later. In the system under discussion, the first-order diffracted light from the diffraction grating is coupled back into the diode, so that the grating and the diode form an external resonator. The use of a diffraction grating in the current setup results in a linewidth reduction of two orders of magnitude (from measurement) and it also allows for the selection of any desired wavelength as the external cavity length can be adjusted. The external cavity length (distance between grating and facade of diode) is chosen to be about 15mm optimise for single mode operation. A peltier element is embedded in the mechanical structure to maintain temperature of the system. A piezo actuator is placed behind the grating to allow small adjustments and scanning of the external cavity length and angle. (See \cite{compactGratingDiodeLaser} for more details)
+A free-running diode suffers from having a large linewidth. In the context of ion trapping laboratory, large linewidth can result in reduced cooling efficiency, unintended energy level transitions or undesired coupling to nearby energy level and so on. An optical cavity that provides optical feedback can greatly reduce the output linewidth. How an external cavity affects emission wavelength will be discussed later. In the system under discussion, the first-order diffracted light from the diffraction grating is coupled back into the diode, so that the grating and the diode form an external resonator. The use of a diffraction grating in the current setup results in a linewidth reduction of two orders of magnitude and it also allows for the selection of any desired wavelength as the external cavity length can be adjusted\cite{compactGratingDiodeLaser}.The external cavity length (distance between grating and facade of diode) is chosen to be about 15mm optimise for single mode operation according to \cite{compactGratingDiodeLaser}. A peltier element is embedded in the mechanical structure to maintain temperature of the system. A piezo actuator is placed behind the grating to allow small adjustments and scanning of the external cavity length and angle. (See \cite{compactGratingDiodeLaser} for more details)
 \par
-To tune the emission wavelength an ECOL, consider the following picture. The gain profile of a typical laser diode has a width of 10nm. The emission wavelength is determined by the competition between the longitudinal modes of the laser cavity, which are typically separated by 100-200 GHz\cite{compactGratingDiodeLaser}. The laser operates at the mode which experiences the maximum gain (See Fig \ref{fig:diodeLaserGainCurve}.
+To tune the emission wavelength of an ECOL, consider the following picture. The gain profile of a typical laser diode has a width of 10nm \cite{compactGratingDiodeLaser}. The emission wavelength is determined by the competition between the longitudinal modes of the laser cavity, which are typically separated by 100-200 GHz\cite{compactGratingDiodeLaser}. The laser operates at the mode which experiences the maximum gain (See Fig \ref{fig:diodeLaserGainCurve}. In this picture, the maximum gain happens at where the four main gain profiles overlapped the most. In Fig \ref{fig:diodeLaserGainCurve}, mission frequency is likely to be in the red marked region. 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=.8\textwidth]{diodeLaserGainCurve.jpg}
+    \includegraphics[width=.8\textwidth]{diodeLaserGainCurve.png}
     \caption{Schematic representation of mode competition in an ECDL\cite{DiodeLaserInducedFluorescenceForGas-PhaseDiagnostics}}
     \label{fig:diodeLaserGainCurve}
 \end{figure}
-Hence there are three fine-tunable parameters that affect the emission wavelength: the temperature, piezo voltage and the injection current: 
+There are three fine-tunable parameters that affect the emission wavelength: the temperature, piezo voltage and the injection current (to the diode): 
 \begin{enumerate}
-    \item Temperature variations cause a change of the cavity length (and thus a change of the resonance frequencies of the longitudinal modes) and at the same time a frequency shift of the gain profile. Consequently, the emission wavelength can be tuned with the temperature. However, in the process of tuning, the gain of the modes varies such that at some point the laser eission frequency jumps from one mode to another (commonly referred to as \textbf{mod-hopping}), resulting in a number of inaccessible frequency domains. \cite{compactGratingDiodeLaser} suggests that the width of the accessible frequency domain is typically a fraction of the spectral range of the laser cavity. Here with laser cavity being 15mm, it's several tens of GHz.
+    \item Temperature variations cause a change of the cavity length (and thus a change of the resonance frequencies of the longitudinal modes) and at the same time a frequency shift of the gain profile. Consequently, the emission wavelength can be tuned with the temperature. However, in the process of tuning, the gain of the modes varies such that at some point the laser emission frequency jumps from one mode to another (commonly referred to as \textbf{mod-hopping}), resulting in a number of inaccessible frequency domains. For instance in Fig \ref{fig:diodeLaserGainCurve}, if the Grating feedback profile is continuously shifted to the left emission frequency might jump from the red-marked region to the blue-marked region as the region of maximum overlap changes. \cite{compactGratingDiodeLaser} suggests that the width of the accessible frequency domain is typically a fraction of the spectral range of the laser cavity. Here with laser cavity being 15mm, it's several tens of GHz.
 
-    \item A second method which can be employed to tune the emission wavelength is to vary the injection current. This leads to a corresponding temperature change and also a change of the carrier density and thus of refractive index of the semiconductor material. Injection current tuning also suffers from mode hopping. 
-    \par
-    Note: Temperature tuning can cover a frequency range of the order of several tens of nm in wavelength at a typical rate of 0.3 nm/K, injection current typically covers a range of several tens of GHz only at a typical rate of 4GHz/mA. 
+    \item A second parameter that can be used to tune the emission wavelength is to vary the injection current. This leads to a corresponding temperature change and also a change of the carrier density and thus of refractive index of the semiconductor material. Injection current tuning also suffers from mode hopping. However, as we want to tune the wavelengths of the laser bewteen 638.6102nm and 638.6151nm to address two different state transitions quickly, we need a modhopping-free region that at least covers these two wavelengths. The solution is to vary the injection current and the piezo voltage synchronously so as to lower the probability of mod hop. As shown in Fig \ref{fig:638Driver}, from left to right are accordingly the laser driver, coefficient gain board and the piezo voltage supply. As the piezo votlage is varied, it supplies a sync output to the coefficient gain board which then outputs a proportional volage to the laser driver whcih offests the injection current such that the gain curve of injection current and grating move synchronously. 
 \end{enumerate}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=.8\textwidth]{638Driver.png}
+    \caption{638nm laser driver boards}
+    \label{fig:638Driver}
+\end{figure}
  
-After careful replacement of the original dead diode, coarse adjustment of the wavelength is achieved by horizontally tilting the grating with the micrometer screw. The main goal now is to vary the temperature and injection current in search for a mode-hopping-free region in the gain profile near the desired wavelength of around 638.615nm. Fig \ref{fig:diodeLaserEW} shows a few tens of data points of temperature-EW plots. The bottom data points from a dense grid as expected, showing that it's a mode-hop-free region. Whereas the top few data points probably is a result of mode hopping. After many trial and error, the final set of parameters arriving at EW=638.615nm is [set temperature for the peltier = 17.92$\degree$, set current = 52.3mA, current offset = -0.563 mA, piezo voltage = 2.5 V] However, this EW still suffers from drifting. 
+After careful replacement of the original dead diode, coarse adjustment of the wavelength is achieved by horizontally tilting the grating with the micrometer screw. The main goal now is to vary the temperature and injection current in search for a mode-hopping-free region in the gain profile near the desired wavelength of around 638.615nm. Fig \ref{fig:diodeLaserEW} shows a few tens of data points of temperature-EW plots. The bottom data points from a dense grid as expected, showing that it's a mode-hop-free region. Whereas the top few data points probably is a result of mode hopping. After many trial and error, the final set of parameters arriving at EW=638.615nm is [set temperature for the peltier = 17.92$\degree$, set current = 52.3mA, current offset = -0.563 mA, piezo voltage = 2.5 V However, this EW still suffers from drifting. 
 %TODO: explain the current offset here
 
 \begin{figure}[H]
@@ -139,7 +142,7 @@ When dealing with laser beams, Gaussian beam optics is commonly considered. As t
 \par
 First we need to measure the beam spot diameter at different distances from the collimating lens. To do so, consider the knife edge measurement for very precise measurement. Alternatively consider using a CCD camera for measurement for precision of up to $\mu m$ level precision (size of CCD pixels). 
 \par
-To do a proper knife edge measurement, refer to \cite{KnifeEdgeMeasurement} for details. A piece of paper blade is painted with black paint to use as the blocking knife edge. Black paint is to reduce reflection of laser beam. The black-painted paper blade is then mounted onto a translational stage as shown in Fig .... Position the blade perpendicular to the laser beam. Place a photodiode behind the blade as shown in Fig \ref{fig:knifeEdgeMeasurement} and connect the photodiode to an Arduino. Finally connect the Arduino to a computer and run code \ref{knifeEdgeMeasurementDataCollection} in Annex. The code collects three sets of voltage reading from the photodiode and take average. Move the knife edge to block more light by rotating the translational stage. run code \ref{knifeEdgeMeasurementDataCollection} in Annex again. Repeat the previous steps until reading from the photodidoe is close to background reading. Now input the distance (of knife edge) - photodiode voltage data from previous steps to code \ref{knifeEdgeMeasurementDataProcessing} in Annex for data processing. This code fits the distance-voltage data to an error function and outputs a fitted value of the laser beam width. 
+To do a proper knife edge measurement, refer to \cite{KnifeEdgeMeasurement} for details. A piece of paper blade is painted with black paint to use as the blocking knife edge. Black paint is to reduce reflection of laser beam. The black-painted paper blade is then mounted onto a translational stage as shown in Fig \ref{fig:knifeEdgeMeasurementSetup}. Position the blade perpendicular to the laser beam. Place a photodiode behind the blade as shown in Fig \ref{fig:knifeEdgeMeasurement} and connect the photodiode to an Arduino. Finally connect the Arduino to a computer and run code \ref{knifeEdgeMeasurementDataCollection} in Annex. The code collects three sets of voltage reading from the photodiode and take average. Move the knife edge to block more light by rotating the translational stage. run code \ref{knifeEdgeMeasurementDataCollection} in Annex again. Repeat the previous steps until reading from the photodiode is close to background reading. Now input the distance (of knife edge) - photodiode voltage data from previous steps to code \ref{knifeEdgeMeasurementDataProcessing} in Annex for data processing. This code fits the distance-voltage data to an error function and outputs a fitted value of the laser beam width. 
 
 \begin{figure}[H]
     \centering
@@ -147,14 +150,15 @@ To do a proper knife edge measurement, refer to \cite{KnifeEdgeMeasurement} for 
     \caption{Knife Edge Measurement}
     \label{fig:knifeEdgeMeasurement}
 \end{figure}
-%TODO: insert figure of knife edge measurement real setup here
 
-Although the aforementioned knife edge measurement with a knife blade is can be very precise up to the limit of diffraction caused by the blade, it's very time consuming without the translational stage being automated. With time constraint, a less precise (up to $\mu m$ level) yet much faster method with a CCD camera can be employed. Place a camera such that the laser beam spot falls completely on the CCD sensor. Run code \ref{gaussianBeamCharacterisation} in Annex to measure the laser beam spot horizontal and vertical radius at the position of the CCD sensor. The find horizontal radius, the code sums up all rows of pixels and filter for pixels exceeding $1/e^2$ of the pixel with maximum reading. Then take the right most pixel position minus the left more pixel position as an estimate of the beam spot diameter. The code runs similarly for vertical beam spot radius. For details, see code \ref{gaussianBeamCharacterisation} in Annex. 
-\par
-I used a Point Grey Research Chameleon CMLN-13S2M CCD camera for date taking. 
-%TODO: insert photon of setup here. 
-\par 
-After measuring the beam diameter at as many different distances as possible, fit the data to the Gaussian beam beam radius - z position by using the code ... in Annex to arrive on estimation of the beam waist radius and z position. Adjust the collimating lens accordingly to make the beam waist z position as far as possible. 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=.8\textwidth]{knifeEdgeMeasurementSetup.png}
+    \caption{Knife edge measurement estup}
+    \label{fig:knifeEdgeMeasurementSetup}
+\end{figure}
+
+Although the aforementioned knife edge measurement with a knife blade is can be very precise up to the limit of diffraction caused by the blade, it's very time consuming without the translational stage being automated. With time constraint, a less precise (up to $\mu m$ level) yet much faster method with a CCD camera can be employed. Place a camera such that the laser beam spot falls completely on the CCD sensor. Run code \ref{gaussianBeamCharacterisation} in Annex to measure the laser beam spot horizontal and vertical radius at the position of the CCD sensor. The find horizontal radius, the code sums up all rows of pixels and filter for pixels exceeding $1/e^2$ of the pixel with maximum reading. Then take the right most pixel position minus the left more pixel position as an estimate of the beam spot diameter. The code runs similarly for vertical beam spot radius. For details, see code \ref{} in Annex. I used a Point Grey Research Chameleon CMLN-13S2M CCD camera with pixel size 3.75 µm for data taking. Pixel size is important here as it determines the error margin of my final estimated beam diameter. After measuring the beam diameter at as many different distances as possible, fit the data to the Gaussian beam beam radius - z position by using the code \ref{code} in Annex to arrive on estimation of the beam waist radius and z position. Adjust the collimating lens accordingly to make the beam waist z position as far as possible. 
 
 In order to monitor the laser system emission wavelength, part of the laser beam power is sent to the wavemeter via a fiber. To send a laser beam into a single-mode optical fibre is to couple their spatial modes, follow the procedure listed in Appendix \ref{appendix:laerFibreCoupling}. In green rectangle of Fig \ref{fig:638laserSetup}, the left fibre mount is used to send partial laser power to the wavemeter for wavelength monitoring and the right fibre mount is used to send laser beam to the ion trap for use. 
 
@@ -407,11 +411,11 @@ thank the lab people! Jaren, Muyoung, Dzmitry, Nigel, Kowei
     \label{fig:laserCavityCoupling}
 \end{figure}
 
-\lstinputlisting[language=Python, linewidth=0.9\textwidth, basicstyle=\small\ttfamily, breaklines=true, breakatwhitespace=true, caption = Gaussian Beam Characterisation code with a CCD camera, label=gaussianBeamCharacterisation]{gaussianBeamCharacterisation.py}
+\lstinputlisting[language=Python, linewidth=0.9\textwidth, basicstyle=\small\ttfamily, breaklines=true, breakatwhitespace=true, caption = Gaussian Beam Characterisation code with a CCD camera, label=code:gaussianBeamCharacterisation]{gaussianBeamCharacterisation.py}
 
-\lstinputlisting[language=Python, linewidth=0.9\textwidth, basicstyle=\small\ttfamily, breaklines=true, breakatwhitespace=true, caption=Knife Edge Measurement Data Collection, label=knifeEdgeMeasurementDataCollection]{knifeEdgeMeasurementDataCollection.py}
+\lstinputlisting[language=Python, linewidth=0.9\textwidth, basicstyle=\small\ttfamily, breaklines=true, breakatwhitespace=true, caption=Knife Edge Measurement Data Collection, label=code:knifeEdgeMeasurementDataCollection]{knifeEdgeMeasurementDataCollection.py}
 
-\lstinputlisting[language=Python, linewidth=0.9\textwidth, basicstyle=\small\ttfamily, breaklines=true, breakatwhitespace=true, caption=Knife Edge Measurement Data Processing, label=knifeEdgeMeasurementDataProcessing]{knifeEdgeMeasurementDataProcessing.py}
+\lstinputlisting[language=Python, linewidth=0.9\textwidth, basicstyle=\small\ttfamily, breaklines=true, breakatwhitespace=true, caption=Knife Edge Measurement Data Processing, label=code:knifeEdgeMeasurementDataProcessing]{knifeEdgeMeasurementDataProcessing.py}
 
 
 \bibliographystyle{plain}
