--- a/main.tex
+++ b/main.tex
@@ -142,7 +142,7 @@ When dealing with laser beams, Gaussian beam optics is commonly considered. As t
 \par
 First we need to measure the beam spot diameter at different distances from the collimating lens. To do so, consider the knife edge measurement for very precise measurement. Alternatively consider using a CCD camera for measurement for precision of up to $\mu m$ level precision (size of CCD pixels). 
 \par
-To do a proper knife edge measurement, refer to \cite{KnifeEdgeMeasurement} for details. A piece of paper blade is painted with black paint to use as the blocking knife edge. Black paint is to reduce reflection of laser beam. The black-painted paper blade is then mounted onto a translational stage as shown in Fig \ref{fig:knifeEdgeMeasurementSetup}. Position the blade perpendicular to the laser beam. Place a photodiode behind the blade as shown in Fig \ref{fig:knifeEdgeMeasurement} and connect the photodiode to an Arduino. Finally connect the Arduino to a computer and run code \ref{knifeEdgeMeasurementDataCollection} in Annex. The code collects three sets of voltage reading from the photodiode and take average. Move the knife edge to block more light by rotating the translational stage. run code \ref{knifeEdgeMeasurementDataCollection} in Annex again. Repeat the previous steps until reading from the photodiode is close to background reading. Now input the distance (of knife edge) - photodiode voltage data from previous steps to code \ref{knifeEdgeMeasurementDataProcessing} in Annex for data processing. This code fits the distance-voltage data to an error function and outputs a fitted value of the laser beam width. 
+To do a proper knife edge measurement, refer to \cite{KnifeEdgeMeasurement} for details. A piece of paper blade is painted with black paint to use as the blocking knife edge. Black paint is to reduce reflection of laser beam. The black-painted paper blade is then mounted onto a translational stage as shown in Fig \ref{fig:knifeEdgeMeasurementSetup}. Position the blade perpendicular to the laser beam. Place a photodiode behind the blade as shown in Fig \ref{fig:knifeEdgeMeasurement} and connect the photodiode to an Arduino. Finally connect the Arduino to a computer and run code \ref{code:knifeEdgeMeasurementDataCollection} in Annex. The code collects three sets of voltage reading from the photodiode and take average. Move the knife edge to block more light by rotating the translational stage. run code \ref{code:knifeEdgeMeasurementDataCollection} in Annex again. Repeat the previous steps until reading from the photodiode is close to background reading. Now input the distance (of knife edge) - photodiode voltage data from previous steps to code \ref{code:knifeEdgeMeasurementDataProcessing} in Annex for data processing. This code fits the distance-voltage data to an error function and outputs a fitted value of the laser beam width. 
 
 \begin{figure}[H]
     \centering
@@ -158,23 +158,13 @@ To do a proper knife edge measurement, refer to \cite{KnifeEdgeMeasurement} for 
     \label{fig:knifeEdgeMeasurementSetup}
 \end{figure}
 
-Although the aforementioned knife edge measurement with a knife blade is can be very precise up to the limit of diffraction caused by the blade, it's very time consuming without the translational stage being automated. With time constraint, a less precise (up to $\mu m$ level) yet much faster method with a CCD camera can be employed. Place a camera such that the laser beam spot falls completely on the CCD sensor. Run code \ref{gaussianBeamCharacterisation} in Annex to measure the laser beam spot horizontal and vertical radius at the position of the CCD sensor. The find horizontal radius, the code sums up all rows of pixels and filter for pixels exceeding $1/e^2$ of the pixel with maximum reading. Then take the right most pixel position minus the left more pixel position as an estimate of the beam spot diameter. The code runs similarly for vertical beam spot radius. For details, see code \ref{} in Annex. I used a Point Grey Research Chameleon CMLN-13S2M CCD camera with pixel size 3.75 µm for data taking. Pixel size is important here as it determines the error margin of my final estimated beam diameter. After measuring the beam diameter at as many different distances as possible, fit the data to the Gaussian beam beam radius - z position by using the code \ref{code} in Annex to arrive on estimation of the beam waist radius and z position. Adjust the collimating lens accordingly to make the beam waist z position as far as possible. 
+Although the aforementioned knife edge measurement with a knife blade is can be very precise up to the limit of diffraction caused by the blade, it's very time consuming without the translational stage being automated. With time constraint, a less precise (up to $\mu m$ level) yet much faster method with a CCD camera can be employed. Place a camera such that the laser beam spot falls completely on the CCD sensor. Run code \ref{gaussianBeamCharacterisation} in Annex to measure the laser beam spot horizontal and vertical radius at the position of the CCD sensor. The find horizontal radius, the code sums up all rows of pixels and filter for pixels exceeding $1/e^2$ of the pixel with maximum reading. Then take the right most pixel position minus the left more pixel position as an estimate of the beam spot diameter. The code runs similarly for vertical beam spot radius. For details, see code \ref{code:gaussianBeamCharacterisation} in Annex. I used a Point Grey Research Chameleon CMLN-13S2M CCD camera with pixel size 3.75 µm for data taking. Pixel size is important here as it determines the error margin of my final estimated beam diameter. To use \ref{code:gaussianBeamCharacterisation} as it is, take a background image and 5 beam images at differnt z-positions. Name the files according to README and run the script to get an estimation of the horizontal and vertical beam radius. Adjust the collimating lens accordingly to make the beam waist z position as far as possible. 
+\\
+\par
+In order to monitor the laser system emission wavelength, part of the laser beam power is sent to the wavemeter via a fiber. To send a laser beam into a single-mode optical fibre is to couple their spatial modes, follow the procedure listed in Appendix \ref{appendix:laerFibreCoupling}. In red rectangle of Fig \ref{fig:638laserSetup}, the left fibre mount is used to send partial laser power to the wavemeter for wavelength monitoring and the right fibre mount is used to send laser beam to the ion trap for use. 
 
-In order to monitor the laser system emission wavelength, part of the laser beam power is sent to the wavemeter via a fiber. To send a laser beam into a single-mode optical fibre is to couple their spatial modes, follow the procedure listed in Appendix \ref{appendix:laerFibreCoupling}. In green rectangle of Fig \ref{fig:638laserSetup}, the left fibre mount is used to send partial laser power to the wavemeter for wavelength monitoring and the right fibre mount is used to send laser beam to the ion trap for use. 
-
-
-
-
-
-
-\chapter{Frequency Locking A Laser: Pound-Drever-Hall Method}
-Following sources are relevant to the current section: 
-\begin{enumerate}
-    \item paper: An introduction to Pound–Drever–Hall laser frequency stabilization \cite{PDHintro}. This paper gives an overview of the scheme of Pound-Drever-Hall method. 
-    \item paper: Laser phase and frequency stabilization using an optical resonator \cite{PDH1983}. This is original paper that proposed the PDH scheme in 1983. 
-\end{enumerate}
-
-Tunable lasers have multiple wavelength-selecting elements such as piezo-controlled etalons and gratings. Typically, the length of the lasing cavity is controlled by a voltage sent to a piezo-electric transducer. The laser-cavity length can change because of a number of factors such as temperature changes, and mechanical vibrations. These factors affect the laser-frequency stability. The standard PDH method of frequency-locking involves the following process: A laser's frequency is measured with a Fabry-Perot cavity, and this measurement is fed back to the laser to suppress frequency drift. \cite{PDH1983}\cite{PDHintro}
+\chapter{Locking A F-P Cavity To A Master laser Through PDH Technique}
+Tunable lasers have multiple wavelength-selecting elements such as piezo-controlled etalons and gratings. Typically, the length of the lasing cavity is controlled by a voltage sent to a piezo-electric transducer. The laser-cavity length can change because of a number of factors such as temperature changes, and mechanical vibrations. These factors affect the laser-frequency stability. The standard PDH method of frequency-locking involves the following process: A laser's frequency is measured with a Fabry-Perot cavity, and this measurement is fed back to the laser to suppress frequency drift\cite{PDH1983}\cite{PDHintro}.
 \par
 \begin{figure}[H]
     \centering
@@ -183,7 +173,7 @@ Tunable lasers have multiple wavelength-selecting elements such as piezo-control
     \label{fig:PDHlayout}
 \end{figure}
 
-Referring to Fig \ref{fig:PDHlayout}, the basic steps of a PDH locking scheme is outlined as following: 
+Referring to Fig \ref{fig:PDHlayout}, the basic steps of a PDH locking scheme are outlined as following: 
 \begin{enumerate}
     \item A laser beam is passed through a Pockels cell to modulate its frequency at a frequency small relative to the $\Delta \nu_{fsr}$ free spectral range of the optical cavity. My cavity has length $L=15$cm, $\Delta \nu_{fsr} = c/2L \approx 1GHz$. Hence my EOM at $\approx 38 MHz$, as discussed in the EOM section, is appropriate here. Note that EOM only modulates light of polarisation parrallel to the EOM's oscillating electric field. In my case horizontal polarisation w.r.t the optical table is used. (i.e. a quarter-wave-plate and half-wave-plate pair is used to clean up laser beam polarisation to be horizontal before entering the EOM) 
 
@@ -206,10 +196,10 @@ Referring to Fig \ref{fig:PDHlayout}, the basic steps of a PDH locking scheme is
 %TODo: insert image of error signal here
 \section{EOM (Electro-optic Modulator)}
 % put basic intro to an EOM here 
-In certain types of crystals it is possible to effect a change in the index of refraction that is proportional to the applied electric field. This is the linear electro-opic effect (also known as the Pockels effect). Applying a modulated electric field across such a nonlinear crystal (usualy the KDP type) and passing a beam of laser through the crystal leads to the laser beam being modulated in phase. (detail see: \cite{fundamentalsOfPhotonics}
+In certain types of crystals it is possible to effect a change in the index of refraction that is proportional to the applied electric field. This is known as the Pockels effect. Applying a modulated electric field across such a crystal (usually the KDP type) and passing a beam of laser through the crystal leads to the laser beam being modulated in phase. (detail see: \cite{fundamentalsOfPhotonics}) 
 
 \subsection{Theory and Model}
-When a time-varying electric field is applied to the nonlinear crystal inside the EOM, the index of refraction $n$ changes in a sinusoidal manner resulting in phase modulation of the laser beam passing through the crystal. Consider the following short mathematical example to see that phase modulation is equivalent to frequency: 
+When a time-varying electric field is applied to the nonlinear crystal inside the EOM, the index of refraction $n$ changes in a sinusoidal manner resulting in phase modulation of the laser beam passing through the crystal. Consider the following short mathematical example to see that phase modulation is equivalent to frequency modulation: 
 \\
 % 见激光原理for this part
 Suppose instantaneous electric field at a point of EM wave of a laser beam: 
@@ -238,23 +228,13 @@ If we do Fourier transform to Eqn \ref{eqn:7.1.9}, we obtain in frequency space:
 
 Eqn \ref{eqn:7.1.10} shows that when a single-frequency laser beam is modulated by a sinusoidal frequency, the modulated beam in frequency space comprises of the unmodulated frequency $\omega_0$ and infinite sidebands. Sideband frequency spacing is $\omega_m$, modulation frequency. 
 % actually not sure about this, need to double check the math
-Sideband amplitudes are determined by the Bessel function $J_n(m)$. (See Fig \ref{fig:EOMsidebandTheory}) What's of concern in this case is that EOM phase modulation produces frequency sidebands of laser beam. 
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.3\textwidth]{EOMsidebandTheory.png}
-    \caption{modulated laser beam frequency sepctrum}
-    \label{fig:EOMsidebandTheory}
-\end{figure}
+Sideband amplitudes are determined by the Bessel function $J_n(m)$. What's of concern in this case is that EOM phase modulation produces frequency sidebands of modulated laser beam. 
 
 \subsection{EOM Tank Circuit Board: Model and Construction}
-To construct an EOM tank circuit board and tune it to a partiular frequency, the following sources are useful: 
-\begin{enumerate}
-    \item paper: Design and construction of an efficient electro-optic modulator for laser spectroscopy\cite{20MHzEOM}
-    \item textbook: Fundamentals of Photonics\cite{fundamentalsOfPhotonics}
-    \item Prof Christian group's internal wiki has an entry on "How to build an EOM". There is a set of detailed note on EOM construction written by Meng Khoon. 
-\end{enumerate}
-The schematic of EOM circuit board is shown in Fig \ref{fig:eom-tank-cirucuit1}. Note that the components L, $C_1$, $C_2$ are nonideal components, i.e. the parasitics are if gnored here.
+To construct an EOM tank circuit board and tune it to a particular frequency, the following sources are useful: \cite{20MHzEOM}is the main paper that discusses Design and construction of an efficient electro-optic modulator for laser spectroscopy. Prof Christian group's internal wiki has an entry on "How to build an EOM". There is a set of detailed note on EOM construction written by Meng Khoon. 
+\\
+\par
+The schematic of EOM circuit board is shown in Fig \ref{fig:eom-tank-cirucuit1}. Note that the components L, $C_1$, $C_2$ here are nonideal components, i.e. the parasitics are if ignored here.
 $C_1$ refers to EOM crystal (ideally with correct AR coating for the relevant wavelength, in my case $\approx$738nm and $\approx$965nm)
 
 \begin{figure}[H]
@@ -264,7 +244,7 @@ $C_1$ refers to EOM crystal (ideally with correct AR coating for the relevant wa
     \label{fig:eom-tank-cirucuit1}
 \end{figure}
 
-The task of constructing an EOM at a particular modulation frequency can be be roughly be broken into the following three steps:
+The task of constructing an EOM at a particular modulation frequency can be be roughly broken into the following three steps:
 \par
 Firstly, the LC circuit is in place to act as an amplifier so that the EOM can driven with low-power RF source of $<$ 1W, yet still providing significant electric field across the crystal for phase modulation. 
 \par
@@ -273,7 +253,7 @@ Since we have an intended EOM modulation frequency frequency $f_0$, and the capa
 \par
 After measurement of $C_1$, we can estimate the capacitance of the tank circuit board to be $C' = \frac{C_1C_2}{C_1+C_2} \approx C_1$. This is because $C_1 \gg C_2$ where $C_2$ is a coupling capacitor that will be explained later. The resonant frequency of the tank circuit can be estimated to be $f = \frac{\omega}{2\pi} = \frac{1}{2\pi\sqrt{LC'^2}}$. Rearranging to get $L = \frac{1}{(2\pi f C_1)^2}$, to get a resonant frequency of about 35 MHz, a $2 \mu H$ inductor is needed, the closest off-the-shelf inductor is $2.2 \mu H$. 
 \par
-Next the overall impedance of the EOM tank circuit needs to be matched to be $50\ohm$ such such that RF signal going to the EOM tank will be mostly absorbed and not reflected. In order tune the overall impedance of the EOM tank circuit, a coupling capacitor $C_2$ is added as shown in schematic \ref{fig:eom-tank-cirucuit1}. The overall loss of the EOM tank circuit can be modelled by a resistor $R_p$ as shown in Fig \ref{fig:eom-tank-cirucuit2}. Here we consider the components ideal. Note that parasitic resistance can be dependent on signal frequency, environment and many others. Here take it as $ R_p \approx 15 \Ohm$ based on Meng Khoon's note. However, much more careful characterisations of the circuit can be done. The coupling capacitor does not affect the tank circuit resonant frequency significantly as $C_1 \gg C_2$. so $C' = \frac{C_1C_2}{C_1+C_2} \approx C_1$ as mentioned earlier.  
+Secondly, the overall impedance of the EOM tank circuit needs to be matched to be $50\ohm$ such such that RF signal going to the EOM tank will be mostly absorbed and not reflected. In order tune the overall impedance of the EOM tank circuit, a coupling capacitor $C_2$ is added as shown in schematic \ref{fig:eom-tank-cirucuit1}. The overall loss of the EOM tank circuit can be modelled by a resistor $R_p$ as shown in Fig \ref{fig:eom-tank-cirucuit2}. Here we consider the components ideal. Note that parasitic resistance can be dependent on signal frequency, environment and many others. Here take it as $ R_p \approx 15 \Ohm$ based on Meng Khoon's note. However, much more careful characterisations of the circuit can be done. The coupling capacitor does not affect the tank circuit resonant frequency significantly as $C_1 \gg C_2$. so $C' = \frac{C_1C_2}{C_1+C_2} \approx C_1$ as mentioned earlier.  
 
 \begin{figure}[H]
     \centering
@@ -288,12 +268,19 @@ Lastly set up a measurement circuit as shown in Fig \ref{fig:eom-freq-measuremen
 
 \begin{figure}[H]
     \centering
+    \includegraphics[width=.8\textwidth]{EOMboard.png}
+    \caption{EOM board}
+    \label{fig:EOMboard}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
     \includegraphics[width=0.8\textwidth]{eom-freq-measurement-setup.png}
     \caption{EOM frequency measurement setup}
     \label{fig:eom-freq-measurement-setup.png}
 \end{figure}
 
-After tuning the variable capacitor, my EOM tank circuit board has a resonant frequency $f_0 \approx 38 MHz$, see Fig \ref{fig:EOMfrequencyMeasurement}. 
+After tuning the variable capacitor, my EOM tank circuit (Fig \ref{fig:EOMboard}) board has a resonant frequency $f_0 \approx 17.95 MHz$, see Fig \ref{fig:EOMfrequencyMeasurement}. 
 
 \begin{figure}[H]
     \centering
@@ -307,6 +294,7 @@ A final word on EOM construction: To improve on the Q-factor of the EOM tank cir
 %TODO: insert an image of my actual EOM board here
 
 \section{Fabry-Perot Cavity}
+\subsection{Theory}
 Laser resonators are open structures containing two or more mirrors that are aligned to produce optical feedback to the gain element. In the simplest case, a resonator consists of two aligned mirrors. These mirrors are called end mirrors and define the optical cavity. Optical radiation circulates within the cavity, bouncing back and forth between the end mirrors and passing through the gain element. An optical resonator can be characterised by the following parameters: 
 \begin{enumerate}
     \item number of mirrors constituting the resonator
@@ -347,7 +335,7 @@ To couple a well collimated laser beam with beam radius $\omega_1$ (see section 
     \par
     Caution: 
     \begin{enumerate}
-        \item The piezo actuator might fracture under high negative voltage, so avoid sending in negative voltage to it. For my case, I used a offset gain baord to make sure the triangle wave sits above 0V.
+        \item The piezo actuator might fracture under high negative voltage, so avoid sending in negative voltage to it. For my case, I used a offset gain board to make sure the triangle wave sits above 0V.
         \item The voltage sent to the piezo actuator is HV, be cautious and remember to electrically insulate the cavity from the optical table.
     \end{enumerate}
 \end{enumerate}
@@ -358,6 +346,9 @@ To couple a well collimated laser beam with beam radius $\omega_1$ (see section 
     \caption{935nm laser Cavity Scan on Oscilloscope}
     \label{fig:935cavityScan}
 \end{figure}
+
+\section{PDH Cavity Lock: Actual Setup}
+
 
 \section{Measuring Water Vapor Concentration Using the PDH Setup}
 Discuss: I am not doing the laser lock, but instead locking the cavity length to the frequency stable 738nm laser and measuring intensity drift due to water vapor change (as 935nm is readily absorbed by water) of the frequency-stable 935nm laser to indicate a water vapor concentration drift. 
@@ -371,7 +362,7 @@ Discuss: I am not doing the laser lock, but instead locking the cavity length to
         \item AR coating
         \item laser power meter: wavelength selection -> response curve
         \item lens cleaning
-        \item DIY relevant tools in the lab. exmaples: strips of paper for ray tracing
+        \item DIY relevant tools in the lab. examples: strips of paper for ray tracing
         \item electronics stuff: soldering, PCB board inspection
         
     \end{enumerate}
